--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -1,4 +1,4 @@
-# Copyright (c) 2019-2020 Ben Ashbaugh
+# Copyright (c) 2022 Ben Ashbaugh
 #
 # Permission is hereby granted, free of charge, to any person obtaining a copy
 # of this software and associated documentation files (the "Software"), to deal
@@ -58,3 +58,4 @@ function(add_level_zero_sample)
 endfunction()
 
 add_subdirectory( 00_enumlevelzero )
+add_subdirectory( 01_lzinfo )
