add initial julia sample

--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -60,3 +60,4 @@ endfunction()
 add_subdirectory( 00_enumlevelzero )
 add_subdirectory( 01_lzinfo )
 add_subdirectory( 02_hellosysman )
+add_subdirectory( 04_julia )
