--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -61,3 +61,4 @@ add_subdirectory( 00_enumlevelzero )
 add_subdirectory( 01_lzinfo )
 add_subdirectory( 02_hellosysman )
 add_subdirectory( 04_julia )
+add_subdirectory( 05_simpleoverlap )
