--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -1,22 +1,8 @@
-# Copyright (c) 2022 Ben Ashbaugh
 #
-# Permission is hereby granted, free of charge, to any person obtaining a copy
-# of this software and associated documentation files (the "Software"), to deal
-# in the Software without restriction, including without limitation the rights
-# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
-# copies of the Software, and to permit persons to whom the Software is
-# furnished to do so, subject to the following conditions:
+# Copyright (c) 2023 Ben Ashbaugh
 #
-# The above copyright notice and this permission notice shall be included in all
-# copies or substantial portions of the Software.
+# SPDX-License-Identifier: MIT
 #
-# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
-# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
-# SOFTWARE.
 
 function(add_level_zero_sample)
     set(options TEST)
@@ -58,5 +44,6 @@ function(add_level_zero_sample)
 endfunction()
 
 add_subdirectory( 00_enumlevelzero )
+add_subdirectory( 00_extendeddevicequeries )
 add_subdirectory( 01_lzinfo )
 add_subdirectory( 02_hellosysman )
